<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dscmobile.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/calling_tap"
        android:name="com.example.dscmobile.ui.calling.CallingFragment"
        android:label="@string/calling_tap"
        tools:layout="@layout/fragment_calling" />

    <fragment
        android:id="@+id/indoor_setting_tap"
        android:name="com.example.dscmobile.ui.indoorsetting.IndoorSettingFragment"
        android:label="@string/indoor_setting_tap"
        tools:layout="@layout/fragment_indoorsetting" />

    <fragment
        android:id="@+id/notifications_tap"
        android:name="com.example.dscmobile.ui.notifications.NotificationsFragment"
        android:label="@string/notifications_tap"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/mypage_tap"
        android:name="com.example.dscmobile.ui.mypage.MyPageFragment"
        android:label="@string/mypage_tap"
        tools:layout="@layout/fragment_mypage" />
</navigation>